test/testdata/list/index_assignment_blank_error.lox
var list = [];
// error: '_' cannot be used as a value
// lint error: '_' cannot be used as a value
list[_] = 2;
